--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "edge-tts": "^1.0.1",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "xml2js": "^0.6.2"
